<resources>
    <string name="app_name">μForecast</string>
    <string name="app_initials">μF</string>

    <string name="predict_list">All Predictions</string>
    <string name="predict_list_pend">Pending Predictions</string>
    <string name="completed_predictions">Completed Predictions</string>
    <string name="predict_graph">Prediction Summary</string>
    <string name="about_page">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prediction_title_label">Title</string>

    <string name="prediction_title_hint">Add a title</string>
    <string name="confidence_percent">Percent confidence:</string>
    <string name="predict_date">Date of outcome:</string>
    <string name="entry_description">Date of entry:</string>
    <string name="spinner_description">Outcome status:</string>
    <string name="prediction_description_hint">Add description</string>
    <string name="prediction_remove_button">Delete</string>

    <string name="default_confidence_level">0</string>
    <string name="prediction_details_label">Description</string>
    <string name="prediction_result_label">Result</string>
    <string name="new_prediction">New prediction</string>
    <string name="Save">SAVE</string>
    <string name="four_intervals">Four Intervals</string>
    <string name="ten_intervals">Ten Intervals</string>
    <string name="empty_recyclerview">No data available</string>

    <string-array name="predict_spinner_options">
        <item>Unknown</item>
        <item>True</item>
        <item>False</item>
    </string-array>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">"Copyright 2017 Austin Penner

Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.

This app uses the following open source library:"</string>

    <string name="mpandroidchart">MPAndroidChart</string>
    <string name="mp_library_license">"Copyright 2016 Philipp Jahoda

Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."</string>
</resources>
